--- a/covid19/package.json
+++ b/covid19/package.json
@@ -20,6 +20,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
+    "vue-d3-charts": "^0.2.8",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
